--- a/.github/workflows/cleanup-ghcr.yml
+++ b/.github/workflows/cleanup-ghcr.yml
@@ -2,8 +2,8 @@ name: Cleanup GitHub packages
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"  # every day at midnight
+  # schedule:
+  #   - cron: "0 0 * * *"  # every day at midnight
 
 permissions:
   packages: write
