--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,4 @@
-name-template: "$RESOLVED_VERSION 🌈"
+name-template: "$RESOLVED_VERSION"
 tag-template: "v$RESOLVED_VERSION"
 exclude-labels:
   - 'skip-changelog'
